--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <title>Vinheria Vinezza - Vinhos Premium</title>
 </head>
 <body>
-    
+    <header id="header">
+        <div class="container-header">
+            <div class="logo">
+                <img src="./src/assets/imgs/logoVinheria.png" alt="Logo da Vinheria">
+                <h1>Vinheria Vinezza</h1>
+            </div>
+            <nav>
+                <ul class="menu">
+                    <li><a href="#home">HOME</a></li>
+                    <li><a href="#sobre">SOBRE</a></li>
+                    <li><a href="#portfolio">PORTFÓLIO</a></li>
+                    <li><a href="#quiz">QUIZ</a></li>
+                    <li><a href="#contato">CONTATO</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
