Criado SlideShow na Home

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vinheria Vinezza - Vinhos Premium</title>
+    <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
+    <!-- HEADER -->
     <header id="header">
         <div class="container-header">
             <div class="logo">
@@ -23,5 +25,46 @@
             </nav>
         </div>
     </header>
+
+    <!-- SEÇÃO HOME COM SLIDESHOW -->
+    <section id="home" class="hero">
+        <div class="slideshow-container">
+            <div class="slide fade">
+                <img src="https://images.unsplash.com/photo-1506377247377-2a5b3b417ebb?w=1200" alt="Vinhedos">
+                <div class="textoSlide">
+                    <h2>Bem-vindo à Vinezza</h2>
+                    <p>Vinhos Premium Selecionados</p>
+                </div>
+            </div>
+            <div class="slide fade">
+                <img src="https://images.unsplash.com/photo-1510812431401-41d2bd2722f3?w=1200" alt="Barris">
+                <div class="textoSlide">
+                    <h2>Tradição e Qualidade</h2>
+                    <p>Desde 1995</p>
+                </div>
+            </div>
+            <div class="slide fade">
+                <img src="https://images.unsplash.com/photo-1547595628-c61a29f496f0?w=1200" alt="Taças">
+                <div class="textoSlide">
+                    <h2>Experiência Única</h2>
+                    <p>Sabores Inesquecíveis</p>
+                </div>
+            </div>
+            <div class="slide fade">
+                <img src="https://images.unsplash.com/photo-1568213816046-0ee1c42bd559?w=1200" alt="Adega">
+                <div class="textoSlide">
+                    <h2>Nossa Adega Premium</h2>
+                    <p>Vinhos Exclusivos</p>
+                </div>
+            </div>
+            <div class="slide fade">
+                <img src="https://images.unsplash.com/photo-1516594915697-87eb3b1c14ea?w=1200" alt="Degustação">
+                <div class="textoSlide">
+                    <h2>Degustação Especial</h2>
+                    <p>Visite Nossa Vinheria</p>
+                </div>
+            </div>
+        </div>
+    <script src="src/js/script.js"></script>
 </body>
 </html>
