Colocando Botões para mudar tema

--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
                 </div>
             </div>
         </div>
+       
+        <!-- BOTÕES PARA MUDAR TEMA -->
+<div class="theme-buttons">
+<button id="tema-claro" class="btn-theme">Tema Claro</button>
+<button id="tema-escuro" class="btn-theme">Tema Escuro</button>
+<button id="tema-misto" class="btn-theme">Tema Misto</button>
+</div>
+</section>
+ 
     <script src="src/js/script.js"></script>
 </body>
 </html>
