Adicionada no html e css seções sobre e portfólio

--- a/index.html
+++ b/index.html
@@ -66,14 +66,107 @@
             </div>
         </div>
        
-    <!-- BOTÕES PARA MUDAR TEMA -->
-<div class="theme-buttons">
-<button id="tema-claro" class="btn-theme">Tema Claro</button>
-<button id="tema-escuro" class="btn-theme">Tema Escuro</button>
-<button id="tema-misto" class="btn-theme">Tema Misto</button>
-</div>
-</section>
- 
+        <!-- BOTÕES PARA MUDAR TEMA -->
+        <div class="theme-buttons">
+            <button id="tema-claro" class="btn-theme">Tema Claro</button>
+            <button id="tema-escuro" class="btn-theme">Tema Escuro</button>
+            <button id="tema-misto" class="btn-theme">Tema Misto</button>
+        </div>
+    </section>
+
+    <!-- SEÇÃO SOBRE -->
+    <section id="sobre" class="sobre">
+        <div class="container">
+            <h2>Sobre a Vinezza</h2>
+            <div class="sobre-content">
+                <p>A Vinheria Vinezza nasceu em 1995 com a missão de trazer os melhores vinhos para os apreciadores brasileiros. Nossa paixão por vinhos de qualidade nos levou a percorrer vinícolas ao redor do mundo, selecionando cuidadosamente cada rótulo do nosso portfólio.</p>
+                <p>Combinamos tradição com inovação, oferecendo desde vinhos clássicos até edições limitadas e exclusivas. Nossa equipe de sommeliers está sempre pronta para ajudar você a encontrar o vinho perfeito para cada ocasião.</p>
+                <p>Venha nos visitar e descubra o mundo fascinante dos vinhos premium!</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- SEÇÃO PORTFÓLIO - CARDS DE VINHOS -->
+    <section id="portfolio" class="portfolio">
+        <div class="container">
+            <h2>Nosso Portfólio</h2>
+            <div class="cards-container">
+                
+                <!-- Card 1 -->
+                <div class="card">
+                    <img src="./src/assets/imgs/imagemVinho1.jpg" alt="Vinho Tinto">
+                    <div class="card-content">
+                        <h3>Vinezza Reserva Tinto</h3>
+                        <p class="tipo">Cabernet Sauvignon</p>
+                        <p class="descricao">Vinho encorpado com notas de frutas vermelhas maduras e toque de carvalho. Perfeito para carnes vermelhas.</p>
+                        <p class="preco">R$ 189,90</p>
+                        <button class="btn-comprar">Adicionar ao Carrinho</button>
+                    </div>
+                </div>
+
+                <!-- Card 2 -->
+                <div class="card">
+                    <img src="./src/assets/imgs/imagemVinho2.jpg" alt="Vinho Branco">
+                    <div class="card-content">
+                        <h3>Vinezza Branco Premium</h3>
+                        <p class="tipo">Chardonnay</p>
+                        <p class="descricao">Elegante e refrescante, com notas cítricas e florais. Ideal para peixes e frutos do mar.</p>
+                        <p class="preco">R$ 159,90</p>
+                        <button class="btn-comprar">Adicionar ao Carrinho</button>
+                    </div>
+                </div>
+
+                <!-- Card 3 -->
+                <div class="card">
+                    <img src="./src/assets/imgs/imagemVinho3.jpg" alt="Vinho Rosé">
+                    <div class="card-content">
+                        <h3>Vinezza Rosé Sunset</h3>
+                        <p class="tipo">Blend Rosé</p>
+                        <p class="descricao">Leve e aromático com sabor frutado. Perfeito para dias quentes e aperitivos.</p>
+                        <p class="preco">R$ 139,90</p>
+                        <button class="btn-comprar">Adicionar ao Carrinho</button>
+                    </div>
+                </div>
+
+                <!-- Card 4 -->
+                <div class="card">
+                    <img src="./src/assets/imgs/imagemVinho4.jpg" alt="Espumante">
+                    <div class="card-content">
+                        <h3>Vinezza Espumante Celebration</h3>
+                        <p class="tipo">Método Champenoise</p>
+                        <p class="descricao">Bolhas finas e persistentes, sabor refinado. Para celebrações especiais.</p>
+                        <p class="preco">R$ 219,90</p>
+                        <button class="btn-comprar">Adicionar ao Carrinho</button>
+                    </div>
+                </div>
+
+                <!-- Card 5 -->
+                <div class="card">
+                    <img src="./src/assets/imgs/imagemVinho5.jpg" alt="Merlot">
+                    <div class="card-content">
+                        <h3>Vinezza Merlot Clássico</h3>
+                        <p class="tipo">Merlot</p>
+                        <p class="descricao">Suave e aveludado, com taninos macios. Harmoniza com massas e queijos.</p>
+                        <p class="preco">R$ 169,90</p>
+                        <button class="btn-comprar">Adicionar ao Carrinho</button>
+                    </div>
+                </div>
+
+                <!-- Card 6 -->
+                <div class="card">
+                    <img src="./src/assets/imgs/imagemVinho6.jpg" alt="Vinho do Porto">
+                    <div class="card-content">
+                        <h3>Vinezza Porto Vintage</h3>
+                        <p class="tipo">Vinho do Porto</p>
+                        <p class="descricao">Doce e encorpado, com notas de frutas secas. Ideal para sobremesas.</p>
+                        <p class="preco">R$ 249,90</p>
+                        <button class="btn-comprar">Adicionar ao Carrinho</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
     <script src="src/js/script.js"></script>
 </body>
 </html>
