Fazendo o javaScript do Quiz

--- a/index.html
+++ b/index.html
@@ -167,6 +167,24 @@
             </div>
         </div>
     </section>
+
+    <!-- SEÇÃO QUIZ -->
+    <section id="quiz" class="quiz">
+        <div class="container">
+            <h2>Qual Vinho Vinezza Combina com Você?</h2>
+            <div id="quiz-container">
+                <div id="pergunta-container">
+                    <p id="pergunta"></p>
+                    <div id="opcoes"></div>
+                </div>
+                <div id="resultado" style="display: none;">
+                    <h3>Seu Vinho Ideal:</h3>
+                    <p id="resultado-texto"></p>
+                    <button id="reiniciar-quiz" class="btn-reiniciar">Fazer Novamente</button>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="src/js/script.js"></script>
 </body>
 </html>
