--- a/index.html
+++ b/index.html
@@ -185,6 +185,68 @@
             </div>
         </div>
     </section>
+    
+    <!-- SEÇÃO CONTATO -->
+    <section id="contato" class="contato">
+        <div class="container">
+            <h2>Entre em Contato</h2>
+            <form id="form-contato">
+                <div class="form-group">
+                    <label for="nome">Nome Completo:</label>
+                    <input type="text" id="nome" name="nome" required>
+                </div>
+                <div class="form-group">
+                    <label for="telefone">Telefone:</label>
+                    <input type="tel" id="telefone" name="telefone" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">E-mail:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="mensagem">Mensagem:</label>
+                    <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
+                </div>
+                <button type="submit" class="btn-enviar">Enviar Mensagem</button>
+            </form>
+            <div id="mensagem-sucesso" style="display: none;">
+                <p>✓ Mensagem enviada com sucesso! Entraremos em contato em breve.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- FOOTER -->
+    <footer id="footer">
+        <div class="container-footer">
+            <div class="footer-section">
+                <h3>Vinheria Vinezza</h3>
+                <p>Vinhos Premium desde 1995</p>
+            </div>
+            <div class="footer-section">
+                <h3>Contato</h3>
+                <p>📧 contato@vinezza.com.br</p>
+                <p>📱 (11) 98765-4321</p>
+                <p>📍 Rua dos Vinhedos, 123 - São Paulo</p>
+            </div>
+            <div class="footer-section">
+                <h3>Redes Sociais</h3>
+                <div class="social-links">
+                    <a href="#" target="_blank">Facebook</a>
+                    <a href="#" target="_blank">Instagram</a>
+                    <a href="#" target="_blank">Twitter</a>
+                    <a href="#" target="_blank">LinkedIn</a>
+                </div>
+            </div>
+            <div class="footer-section">
+                <h3>Horário de Atendimento</h3>
+                <p>Segunda a Sexta: 9h às 18h</p>
+                <p>Sábado: 9h às 14h</p>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>&copy; 2025 Vinheria Vinezza. Todos os direitos reservados.</p>
+        </div>
+    </footer>
     <script src="src/js/script.js"></script>
 </body>
 </html>
